fix map z-index #33

--- a/src/components/site-components/help-form/help-form.scss
+++ b/src/components/site-components/help-form/help-form.scss
@@ -1,6 +1,4 @@
 .help-form {
-  position: relative;
-
   &__header {
     @include outline;
 
