--- a/src/components/ui-kit-components/map/map.scss
+++ b/src/components/ui-kit-components/map/map.scss
@@ -2,6 +2,7 @@
   &__map-container {
     height: 12.6875rem;
     border-radius: 0.25rem 0.25rem 0 0;
+    z-index: 0;
   }
 
   &__footer {
